[project]
name = "radar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pyqt5>=5.15.11",
    "pyqtgraph>=0.13.7",
    "scipy>=1.15.2",
]

[tool.uv]
constraint-dependencies = ["pyqt5-qt5 <=5.15.2"]
